# OS

./: .gitignore  CMakeLists.txt
include/: childProcessor.hpp  pipe.hpp
lb_1/: CMakeLists.txt
lb_1/include/: childProcess.hpp  process.hpp
lb_1/report/: report.aux
lb_1/report/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
lb_1/src/: child.cpp  childProcess.cpp
lb_1/tests/: test_childProcessor.cpp  test_pipe.cpp
lb_2/: CMakeLists.txt  README.md
lb_2/include/: ArrayManager.h  ParallelSummer.h
lb_2/report/: report.aux
lb_2/report/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
lb_2/src/: ArrayManager.cpp  ParallelSummer.cpp  main.cpp
lb_3/: CMakeLists.txt  README.md  input.txt
lb_3/include/: childProcess.hpp  childProcessor.hpp  mapped_file.hpp  process.hpp
lb_3/report/: LISENSE  report.aux
lb_3/report/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
lb_3/src/: child.cpp  childProcess.cpp  childProcessor.cpp  mapped_file.cpp  parent.cpp
lb_3/tests/: test_removeVowels.cpp
lb_4/: CMakeLists.txt  README.md
lb_4/dynamic_app/: main_dynamic.cpp
lb_4/include/: ECalculator.hpp  PiCalculator.hpp
lb_4/lib1_leibniz_limit/: ELimit.cpp  PiLeibniz.cpp
lb_4/lib2_wallis_series/: ESeries.cpp  PiWallis.cpp
lb_4/report/: report.aux
lb_4/report/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
lb_4/static_app/: main_static.cpp
project/: CMakeLists.txt  Client.cpp  Client.h  README.md  Server.cpp  Server.h  client.cpp  common.h  server.cpp
project/report/: report.aux
project/report/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
src/: childProcessor.cpp  parent.cpp  pipe.cpp
template/report/: report.aux  report.tex
template/report/src/: lb1.tex  lb2.tex  lb3.tex  lb4.tex  lb5.tex  titlepage.tex
template/report/styles/: log-style.sty
